test/tag/missing_close.stderr
error: encountered an opening HTML element "h1" without a corresponding closing tag.
 --> test/tag/missing_close.rs:6:14
  |
6 |             <h1>"High-Five counter: {count}"
  |              ^^
